syntax = "proto3";
package collector_job;





/*
UpdateCollectorJob请求
*/
message UpdateCollectorJobRequest {
message CollectTime {
    /*
    采集开始时间
    */
    string startTime = 1 ;
    /*
    采集结束时间
    */
    string endTime = 2 ;
}
        
    
    /*
    关联的采集模版ID
    */
    string collectorTemplateId = 1 ;
    /*
    实例ID
    */
    string instanceId = 2 ;
    /*
    模型id
    */
    string objectId = 3 ;
    /*
    任务名称
    */
    string jobName = 4 ;
    /*
    过滤条件
    */
    string filter = 5 ;
    /*
    采集时段
    */
    CollectTime collectTime = 6 ;
    /*
    执行超时
    */
    int32 timeout = 7 ;
    /*
    是否启用
    */
    bool enabled = 8 ;
    /*
    采集间隔
    */
    int32 interval = 9 ;
    /*
    关系查询路径
    */
    string path = 10 ;
    /*
    关系查询路径ID
    */
    string pathId = 11 ;
}

/*
UpdateCollectorJob返回
*/
message UpdateCollectorJobResponse {
    /*
    实例ID
    */
    string instanceId = 1 ;
}

/*
UpdateCollectorJobApi返回
*/
message UpdateCollectorJobResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    collector_job.UpdateCollectorJobResponse data = 4 ;
}

